[build-system]
requires = []
build-backend = "madrona-py-build"
backend-path = ["external/madrona/py"]

[project]
name = "gpu_hideseek"
version = "0.1.0"

[tool.madrona.packages.gpu_hideseek]
ext-only = true
ext-out-dir = "build"

# This module includes the PPO implementation for the training demo
[tool.madrona.packages.gpu_hideseek_learn]
path = "train_src/gpu_hideseek_learn"
